manager: don't allow inhibitors to block forced logout

If logout is forced, inhibitors shouldn't stop it !

https://bugzilla.gnome.org/show_bug.cgi?id=750508